--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ConexaoInternet/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ConexaoInternet/Index.cshtml
@@ -2,52 +2,118 @@
 
 @{
     ViewData["Title"] = "Index";
+    string SID = "Nome da Rede";
+    string Local = "Bloco";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Senha)
-            </th>           
-            <th>
-                @Html.DisplayNameFor(model => model.IdBloco)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Senha)
-            </td>            
-            <td>
-                @Html.DisplayFor(modelItem => item.IdBloco)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-            </td>
-        </tr>
+
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h2 class="card-title">
+                                    Pontos de Acesso Cadastrados
+                                </h2>
+                                <a class="btn btn-primary" style="float:right" asp-controller="ConexaoInternet" asp-action="Create">Adicionar Ponto de Acesso</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <table id="table-search" class="table table-bordered table-striped">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @SID
+                                    </th>
+                                    <th>
+                                        @Local
+                                    </th>
+                                    <th>Ações</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Nome)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Blocos[0].Titulo)
+                                        </td>
+                                        <td>
+                                            <a href="@Url.Action("Details", "ConexaoInternet", new { id = item.Id })" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Detalhes </a>
+                                            <a href="@Url.Action("Edit", "ConexaoInternet", new { id = item.Id })" class="btn btn-info btn-xs"><i class="fa fa-edit"></i> Editar </a>
+                                            <a href="@Url.Action("Delete", "ConexaoInternet", new { id = item.Id })" class="btn btn-danger btn-xs text-white"><i class="fa fa-trash"></i> Remover </a>
+                                            <!--
+                                                //TODO: M4RCOSVS0, Isso será implementado depois.
+                                            <a data-toggle="modal" data-target="#modal-remover-@item.Id" class="btn btn-danger btn-xs text-white"><i class="fa fa-trash"></i> Remover </a>
+
+                                                                                        <div class="modal fade" id="modal-remover-@item.Id">
+                                                                                            <div class="modal-dialog modal-sm">
+                                                                                                <div class="modal-content card card-secondary">
+                                                                                                    <div class="modal-header card-header">
+                                                                                                        <h5 class="modal-title">Confirmar Remoção do Bloco ?</h5>
+                                                                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                                                            <span aria-hidden="true" class="text-white">&times;</span>
+                                                                                                        </button>
+                                                                                                    </div>
+                                                                                                    <div class="modal-body text-center">
+                                                                                                        <h5>@SID</h5> <p>@item.</p>
+                                                                                                        <h5>@Local</h5> <p>@item.Blocos[0].Titulo</p>
+                                                                                                    </div>
+
+                                            @using (Html.BeginForm("Delete", "ConexaoInternet", new { id = item.Id }, FormMethod.Post))
+                                            {
+                                                                                                                                                                        <div class="modal-footer justify-content-between">
+                                                                                                                                                                            <a class="btn btn-danger text-white" data-dismiss="modal">Cancelar</a>
+                                                                                                                                                                            <button type="submit" value="Remover" class="btn btn-success">Confimar</button>
+                                                                                                                                                                        </div>
+                                            }
+                                                                                                </div>
+                                                                                            </div>
+                                                                                        </div>
+                                            -->
+
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+@if (TempData["mensagemSucesso"] != null)
+{
+    <div id="mensagem-retorno" onclick="swtAlert('success','Parabéns!','@TempData["mensagemSucesso"]')"></div>
 }
-    </tbody>
-</table>
+else if (TempData["mensagemErro"] != null)
+{
+    <div id="mensagem-retorno" onclick="swtAlert('warning','Falha!', '@TempData["mensagemErro"]')"></div>
+}
+
+@section Scripts {
+
+    <script>
+        $(document).ready(function () {
+            if (document.querySelector('#mensagem-retorno'))
+                document.getElementById("mensagem-retorno").click();
+        });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="~/js/sweet-alert.js"></script>
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
