--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
@@ -204,6 +204,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" asp-controller="ConexaoInternet" asp-action="Index">
+                            <i class="nav-icon fa fa-wifi"></i>
+                            <p>Pontos de acesso</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" asp-controller="Equipamento" asp-action="Index">
                             <i class="nav-icon fa fa-tools"></i>
                             <p>Equipamento de Sala</p>
