tem q terminar ainda

--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ConexaoInternet/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ConexaoInternet/Edit.cshtml
@@ -4,45 +4,113 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-secondary">
+                    <div class="card-header">
+                        <h2 class="card-title">Editar Ponto de Acesso WI-FI</h2>
+                    </div>
+                    <form asp-action="Edit">
+                        <div class="card-body">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="col-md-5">
+                                <div class="form-group" id="ListElements">
+                                    <label asp-for="OrganizacaoId" class="control-label">Organização</label>
+                                    @Html.DropDownListFor(model => model.OrganizacaoId, ViewBag.OrgList as SelectList, new { @class = "form-control" })
+                                    <span asp-validation-for="OrganizacaoId" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <div class="form-group" id="ListElements">
+                                    <label asp-for="IdBloco" class="control-label">Selecione o Bloco</label>
+                                    <select class="form-control" asp-for="IdBloco" onchange="loadSalas()" id="select-bloco">
+                                        @foreach (var item in (IEnumerable<SelectListItem>)ViewBag.Blocos)
+                                        {
+                                            <option value="@item.Value"> @item.Text </option>
+                                        }
+                                    </select>
+                                    <span asp-validation-for="IdBloco" class="text-danger"></span>
+                                </div>
+                                <div>
+                                    <div class="form-group">
+                                        <label asp-for="Nome" class="control-label"></label>
+                                        <textarea asp-for="Nome" class="form-control" maxlength="100" rows="2" style="width:92%"></textarea>
+                                        <span asp-validation-for="Nome" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div>
+                                    <label asp-for="Senha" class="control-label"></label>
+                                    <div class="form-group" style="display: flex; align-items: center;">
+                                        <input id="senha_auth" asp-for="Senha" class="form-control" maxlength="63" rows="1" type="password" style="width:55%; margin-right: 5px;" />
+                                        <div class="icheck-primary d-inline-block">
+                                            <input type="checkbox" id="show_pass" onchange="showPass(this, 'senha_auth')">
+                                            <label for="show_pass">Mostrar Senha</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <span asp-validation-for="Senha" class="text-danger"></span>
+                                <div>
+                                    <div class="form-group">
+                                        <label asp-for="ConfirmarSenha" class="control-label"></label>
+                                        <input id="confirmar_senha_auth" asp-for="ConfirmarSenha" class="form-control" maxlength="63" rows="1" type="password" style="width:55%" />
+                                    </div>
+                                </div>
+                                <span asp-validation-for="ConfirmarSenha" class="text-danger"></span>
+                            </div>
+                        </div>
 
-<h4>ConexaointernetModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                        <div class="card-footer">
+                            <div class="col-md-4">
+                                <input type="submit" value="Salvar" class="btn btn-success" /> |
+                                <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
-                <span asp-validation-for="Senha" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmarSenha" class="control-label"></label>
-                <input asp-for="ConfirmarSenha" class="form-control" />
-                <span asp-validation-for="ConfirmarSenha" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdBloco" class="control-label"></label>
-                <input asp-for="IdBloco" class="form-control" />
-                <span asp-validation-for="IdBloco" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+</section>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+@if (TempData["mensagemSucesso"] != null)
+{
+    <div id="mensagem-retorno" onclick="swtAlert('success','Parabéns!','@TempData["mensagemSucesso"]')"></div>
+}
+else if (TempData["mensagemErro"] != null)
+{
+    <div id="mensagem-retorno" onclick="swtAlert('warning','Falha!', '@TempData["mensagemErro"]')"></div>
+}
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+        $(document).ready(function () {
+            if (document.querySelector('#mensagem-retorno'))
+                document.getElementById("mensagem-retorno").click();
+        });
+
+        function showPass(checkbox, inputId) {
+            var input = document.getElementById(inputId);
+            if (checkbox.checked) {
+                input.type = 'text';
+            } else {
+                input.type = 'password';
+            }
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="~/js/sweet-alert.js"></script>
+    <script src="~/js/bloco-script.js"></script>
+    <script src="~/js/custom.js"></script>
+    <script src="~/plugins/inputmask/inputmask/jquery.mask.js"></script>
+    <script src="~/plugins/jquery/jquery.min.js"></script>
+    <script src="~/plugins/inputmask/min/inputmask/inputmask.min.js"></script>
+    <script src="~/plugins/inputmask/min/inputmask/jquery.inputmask.min.js"></script>
+    <script src="~/js/customLogin.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="~/js/sweet-alert.js"></script>
+}
+@{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
 }
