--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
@@ -54,8 +54,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a asp-controller="Home" asp-action="Index" class="brand-link">
-        <img src="~/img/SmartSalas.png" alt="Knuth" class="brand-image elevation-3"
-             style="opacity: .8; border-radius: 30px">
+        <img src="~/img/3.png" alt="Knuth" class="brand-image">
         <span class="brand-text font-weight-light">SmartSala</span>
     </a>
 
